# DealFlow

./: .gitignore  README.md
ai_service/: agents.py  app.py  pyproject.toml  requirements.txt  router.py  test.py
backend/: full_backup.json  listings_backup.json  pyproject.toml  requirements.txt
backend/src/core/: settings.py  urls.py
backend/src/listings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/src/listings/migrations/: 0001_initial.py  0002_listing_image.py
frontend/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
frontend/src/: App.jsx  ChatRoom.jsx  CreateListing.jsx  Home.jsx  Login.jsx  Profile.jsx  Register.jsx  index.css
